--- a/WEB/src/styles.css
+++ b/WEB/src/styles.css
@@ -32,16 +32,11 @@ html {
   margin: 150px;
 }
 
-.no-margin {
-  margin: 0 !important;
-}
-
-.login-buttons {
+.login-button {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 150px;
 }
 
 .index-Image-head {
@@ -56,12 +51,10 @@ html {
   max-width: 85%;
 }
 
-.loader {
-  border: 8px solid #f3f3f3;
-  border-top: 8px solid #114B5F;
-  border-radius: 50%;
-  width: 80px;
-  height: 80px;
-  animation: spin 2s linear infinite;
-  margin: auto;
+.no-margin {
+  margin: 0 !important;
+}
+
+.no-padding {
+  padding: 0 !important;
 }
