timebuttongroup working, but still unfinished

--- a/WEB/src/components/sidebar.css
+++ b/WEB/src/components/sidebar.css
@@ -37,7 +37,7 @@ body {
 
 /* Position and sizing of burger button */
 .bm-burger-button {
-  position: relative;
+  position: fixed;
   width: 36px;
   height: 30px;
   left: 36px;
@@ -50,10 +50,10 @@ body {
 }
 
 /* Position and sizing of clickable cross button */
-/* .bm-cross-button {
+.bm-cross-button {
   height: 24px;
   width: 24px;
-} */
+}
 
 /* Color/shape of close button cross */
 .bm-cross {
@@ -68,16 +68,16 @@ body {
 }
 
 /* Morph shape necessary with bubble or elastic */
-/* .bm-morph-shape {
+.bm-morph-shape {
   fill: #373a47;
-} */
+}
 
 /* Wrapper for item list */
-/* .bm-item-list {
+.bm-item-list {
   color: #b8b7ad;
-} */
+}
 
 /* Styling of overlay */
-/* .bm-overlay {
+.bm-overlay {
   background: rgba(0, 0, 0, 0.3);
-} */
+}
