--- a/WEB/src/components/Sidebar/menuBar.css
+++ b/WEB/src/components/Sidebar/menuBar.css
@@ -1,5 +1,5 @@
 .menuBar {
-  top: 0;
+  top: 155px;
   right: 0;
   left: 0;
   height: 25%;
@@ -8,9 +8,60 @@
   transform: translateY(-100%);
   transition: transform 0.5s;
   box-shadow: 0 0 5px 1px #595959;
+  background-color: #e9eaec;
+}
+
+.menuBar2 {
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 25%;
+  z-index: 1;
+  position: fixed;
+  transform: translateY(-100%);
+  transition: transform 0.5s;
   background-color: #ffffff;
 }
 
 .menuBar-open {
-    transform: translateY(0);
-  }
+  transform: translateY(0);
+  box-shadow: 0 0 5px 1px #595959;
+}
+
+.button {
+  display: block;
+  border-radius: 4px;
+  border: none;
+  color: #ffffff;
+  background: transparent;
+  text-align: center;
+  font-size: 28px;
+  padding: 10px;
+  width: 150px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+  display: inline-block;
+}
+
+.bar {
+  background-color: #569B7E;
+  z-index: 2;
+  position: relative;
+}
+
+.header {
+  background-color: #569B7E;
+}
+
+.menuPos {
+  width: 200px;
+  white-space: nowrap;
+  margin: 0px;
+  text-align: right;
+}
+
+.menuLogo {
+  max-height: 200px;
+  max-width: 85%;
+}
