--- a/WEB/src/styles.css
+++ b/WEB/src/styles.css
@@ -1,22 +1,11 @@
 body {
   background-color: #ffffff !important;
-  font-family: "Raleway", sans-serif !important;
+  font-family: "Roboto";
   height: 100%;
   display: flex;
   /* min-height: 100vh; */
   flex-direction: column;
   color: #000;
-}
-
-.text-generic {
-  color: rgb(0, 0, 0);
-  text-align: center;
-  padding: 10px;
-  /*max-width: 85%;*/
-}
-
-.text-color {
-  color: rgb(0, 0, 0);
 }
 
 html {
