Changed background colour and removed logout button in the bottom

--- a/WEB/src/Pages/LoginPage/loginPage.css
+++ b/WEB/src/Pages/LoginPage/loginPage.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffffff !important;
+  background-color: #ffffff;
   font-family: "Raleway", sans-serif !important;
   height: 100%;
   display: flex;
