--- a/WEB/src/styles.css
+++ b/WEB/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffffff !important;
+  background-color: #e9e9e9 !important;
   font-family: "Roboto";
   height: 100%;
   display: flex;
