--- a/WEB/src/components/DashboardContent/blodsukkerContent.css
+++ b/WEB/src/components/DashboardContent/blodsukkerContent.css
@@ -1,13 +1,3 @@
-.chevronStyle {
-  position: relative;
-  float: right;
-  display: flex;
-  flex-direction: row;
-  flex: 1;
-
-  /* justify-content: end; */
-}
-
 .divStyle {
   flex: 1;
 }
@@ -31,4 +21,12 @@
 .button-style {
   display: flex;
   justify-content: flex-end;
+}
+
+.atom_displaybutton {
+  padding: 0 0.8rem;
+}
+
+.svgicon chevron {
+  font-size: 1rem;
 }
