--- a/WEB/src/components/MenuBar/menuBar.css
+++ b/WEB/src/components/MenuBar/menuBar.css
@@ -93,7 +93,7 @@ a.menu-link {
 .logoutButton {
   display: block;
   border-radius: 4px;
-  border: none;
+  border: 0;
   color: #a61e7b;
   background: transparent;
   text-align: center;
@@ -103,6 +103,8 @@ a.menu-link {
   cursor: pointer;
   margin: 5px;
   display: inline-block;
+  line-height: 21px;
+  font-weight: 500;
 }
 
 .aStyle {
@@ -110,11 +112,15 @@ a.menu-link {
   border-bottom: none !important;
 }
 
-@media only screen and (max-width: 650px) {
-  .menuLogo {
-    max-width: 90%;
-    max-height: 100%;
-  }
+.textStyle{
+  font-size: 32px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 21px;
+  color: white;
+}
+
+@media only screen and (max-width: 600px) {
   .menuPos {
     width: 125px;
     white-space: nowrap;
@@ -122,10 +128,10 @@ a.menu-link {
     text-align: right;
   }
   .menuBar {
-    top: 95px;
+    top: 48px;
     right: 0;
     left: 0;
-    height: 23%;
+    height: 180px;
     z-index: 1;
     position: fixed;
     transform: translateY(-100%);
@@ -143,12 +149,12 @@ a.menu-link {
     color: #ffffff;
     background: transparent;
     text-align: center;
-    font-size: 28px;
-    padding: 10px;
+    font-size: 18px;
+    padding: 0px;
     width: 100%;
     transition: all 0.5s;
     cursor: pointer;
-    margin: 5px;
+    margin: 0px;
     display: inline-block;
   }
   .aStyle {
@@ -162,6 +168,16 @@ a.menu-link {
     top: 0;
     right: 0;
     left: 0;
-    height: 12%;
+    height: 48px;
+    display: flex;
+    align-items: center;
+  }
+
+  .textStyle{
+    font-size: 18px;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 21px;
+    color: white;
   }
 }
