--- a/WEB/src/styles.css
+++ b/WEB/src/styles.css
@@ -5,7 +5,7 @@ body {
   display: flex;
   flex-direction: column;
   color: #000;
-  top: 23%;
+  top: 55px;
   font-size: 18px;
   font-style: normal;
   font-weight: 500;
