--- a/WEB/src/styles.css
+++ b/WEB/src/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color: #e9e9e9 !important;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   height: 100%;
   display: flex;
   flex-direction: column;
