--- a/WEB/src/components/MenuBar/menuBar.css
+++ b/WEB/src/components/MenuBar/menuBar.css
@@ -16,6 +16,10 @@
   box-shadow: 0 0 5px 1px #595959;
 }
 
+.click-menuBar-open {
+  transform: translateY(0);
+}
+
 .button {
   border-radius: 4px;
   border: none;
@@ -120,7 +124,7 @@ a.menu-link {
   text-align: start;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 750px) {
   .menuPos {
     width: 125px;
     white-space: nowrap;
