--- a/WEB/src/components/MenuBar/menuBar.css
+++ b/WEB/src/components/MenuBar/menuBar.css
@@ -110,9 +110,15 @@ a.menu-link {
   font-weight: 500;
 }
 
-.aStyle {
+.aStyle, .aStyle:link, .aStyle:visited {
   text-decoration: none;
   border-bottom: none !important;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 21px;
+  color: white !important;
+  text-align: start;
 }
 
 .textStyle {
@@ -165,6 +171,12 @@ a.menu-link {
   .aStyle {
     text-decoration: none;
     border-bottom: none !important;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 21px;
+    color: white !important;
+    text-align: start;
   }
   .bar {
     background-color: #569b7e;
