--- a/WEB/src/components/MenuBar/menuBar.css
+++ b/WEB/src/components/MenuBar/menuBar.css
@@ -110,7 +110,9 @@ a.menu-link {
   font-weight: 500;
 }
 
-.aStyle, .aStyle:link, .aStyle:visited {
+.aStyle,
+.aStyle:link,
+.aStyle:visited {
   text-decoration: none;
   border-bottom: none !important;
   font-size: 32px;
@@ -153,6 +155,21 @@ a.menu-link {
     transform: translateY(0);
     box-shadow: 0 0 5px 1px #595959;
   }
+  .menuBar2 {
+    top: 90px;
+    right: 0;
+    left: 0;
+    height: 270px;
+    z-index: 2;
+    position: fixed;
+    transform: translateY(-100%);
+    transition: transform 0.5s;
+    background-color: #e9eaec;
+  }
+  .menuBar-open2 {
+    transform: translateY(0);
+    box-shadow: 0 0 5px 1px #595959;
+  }
   .button {
     border-radius: 4px;
     border: none;
@@ -168,6 +185,28 @@ a.menu-link {
     display: inline-block;
     flex: 1;
   }
+
+  .button2 {
+    border-radius: 4px;
+    border: none;
+    color: black;
+    background: transparent;
+    text-align: center;
+    font-size: 18px;
+    padding: 0px;
+    width: 0px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 0px;
+    display: inline-block;
+    flex: 1;
+    background-color: transparent;
+  }
+
+  .menuButton2 {
+    width: 250px;
+  }
+
   .aStyle {
     text-decoration: none;
     border-bottom: none !important;
@@ -197,5 +236,18 @@ a.menu-link {
     line-height: 21px;
     color: white;
     text-align: start;
+  }
+
+  .rotated-image {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+
+  .toggle-down {
+    transform: rotate(0deg);
+  }
+
+  .toggle-up {
+    transform: rotate(180deg);
   }
 }
