--- a/WEB/src/components/InsightCards/insightCards.css
+++ b/WEB/src/components/InsightCards/insightCards.css
@@ -16,5 +16,21 @@
 
 .view-div {
   position: absolute;
+  top: 18px;
+  flex: 1;
+}
+
+.view-child {
+  flex: 1;
+  width: 200px;
+  position: absolute;
+  right: 16px;
   top: 10px;
+}
+
+.view-parent {
+  display: flex;
+  flex-direction: column;
+  align-items: space-around;
+  height: 20px;
 }
