Menubar styled, inner menu also fixed

--- a/WEB/src/components/MenuBar/menuBar.css
+++ b/WEB/src/components/MenuBar/menuBar.css
@@ -20,6 +20,65 @@
   transform: translateY(0);
 }
 
+.menuBar2 {
+  top: 90px;
+  right: 0;
+  left: 0;
+  height: 200px;
+  z-index: 2;
+  position: fixed;
+  transform: translateY(-100%);
+  transition: transform 0.5s;
+  background-color: #e9eaec;
+}
+
+.menuBar-open2 {
+  transform: translateY(0);
+  box-shadow: 0 0 5px 1px #595959;
+}
+
+a.menu-link2 {
+  text-align: center;
+  color: black;
+  text-decoration: none;
+  border: 0;
+}
+
+.click-menuBar-open2 {
+  transform: translateY(0);
+}
+
+.liBar2 {
+  padding: 6px 12px;
+  border-top: 1px solid #979797;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  font-family: Roboto;
+}
+
+.button2 {
+  border-radius: 4px;
+  border: none;
+  color: black;
+  background: transparent;
+  text-align: center;
+  font-size: 18px;
+  padding: 0px;
+  width: 0px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 0px;
+  display: inline-block;
+  flex: 1;
+  background-color: transparent;
+}
+
+.menuButton2 {
+  width: 500px;
+}
+
 .button {
   border-radius: 4px;
   border: none;
@@ -155,11 +214,14 @@ a.menu-link {
     transform: translateY(0);
     box-shadow: 0 0 5px 1px #595959;
   }
+  .click-menuBar-open {
+    transform: translateY(0);
+  }
   .menuBar2 {
     top: 90px;
     right: 0;
     left: 0;
-    height: 270px;
+    height: 200px;
     z-index: 2;
     position: fixed;
     transform: translateY(-100%);
@@ -169,6 +231,24 @@ a.menu-link {
   .menuBar-open2 {
     transform: translateY(0);
     box-shadow: 0 0 5px 1px #595959;
+  }
+  a.menu-link2 {
+    text-align: center;
+    color: black;
+    text-decoration: none;
+    border: 0;
+  }
+  .click-menuBar-open2 {
+    transform: translateY(0);
+  }
+  .liBar2 {
+    padding: 6px 12px;
+    border-top: 1px solid #979797;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 16px;
+    font-family: Roboto;
   }
   .button {
     border-radius: 4px;
@@ -236,18 +316,5 @@ a.menu-link {
     line-height: 21px;
     color: white;
     text-align: start;
-  }
-
-  .rotated-image {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-
-  .toggle-down {
-    transform: rotate(0deg);
-  }
-
-  .toggle-up {
-    transform: rotate(180deg);
   }
 }
