--- a/WEB/src/components/DateDropdown/dateDropdown.css
+++ b/WEB/src/components/DateDropdown/dateDropdown.css
@@ -5,18 +5,27 @@
 }
 
 .custom-form-select {
-  border: 3px solid #006d84;
+  /* border: 3px solid #006d84; */
+  box-shadow: inset 0 0 0 3px #006d84;
   border-radius: 0;
-  outline-color: #006d84;
+  outline-color: 0 !important;
+  border: 0;
 }
 
-.custom-form-select:enabled {
-  border: 3px solid #006d84;
+.custom-select:hover:not(:disabled) {
+  /* border: 3px solid #006d84; */
   border-radius: 0;
-  box-shadow: #006d84;
+
+  outline-color: #006d84;
+  border: 0;
+  box-shadow: 0 0 0 3px #adadad, inset 0 0 0 3px #064e5f;
 }
-/* 
-.custom-control.hover {
-  background: #006d84;
-  color: red;
-} */
+
+.custom-select:focus:not(:hover):not(:disabled) {
+  /* border: 3px solid #006d84; */
+  box-shadow: inset 0 0 0 3px #006d84;
+  border-radius: 0;
+  border: 0;
+  outline-color: #006d84;
+  outline-color: none !important;
+}
