--- a/WEB/src/components/PeriodStepper/periodStepper.css
+++ b/WEB/src/components/PeriodStepper/periodStepper.css
@@ -9,3 +9,13 @@
 .datestepper-text {
   flex: 2;
 }
+
+.datestepper-button-left {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.datestepper-button-right {
+  display: flex;
+  justify-content: flex-start;
+}
