--- a/WEB/src/styles.css
+++ b/WEB/src/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color: #e9e9e9 !important;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif !important;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -10,6 +10,24 @@ body {
   font-style: normal;
   font-weight: 500;
   line-height: 21px;
+}
+
+h1 {
+  font-family: "Roboto", sans-serif !important;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 36px !important;
+  line-height: 42px;
+  letter-spacing: 0.5625px;
+}
+
+h5 {
+  font-family: "Roboto", sans-serif !important;;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px !important;
+  line-height: 21px;
+  letter-spacing: 0.5625px;
 }
 
 html {
