Added arrow to piechart

--- a/WEB/src/components/InsightCards/trendGoalsCard.css
+++ b/WEB/src/components/InsightCards/trendGoalsCard.css
@@ -27,3 +27,10 @@
 .lower-trend-goals-div {
   margin-top: 18px;
 }
+
+/* .trend-polygon {
+  color: #4f4f4f;
+  position: absolute;
+  top: 0;
+  right: 0;
+} */
