--- a/WEB/src/components/GoalContent/goalContent.css
+++ b/WEB/src/components/GoalContent/goalContent.css
@@ -37,10 +37,9 @@
 
 .editOutlinedStyle {
   color: #006d84;
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
-  margin-left: 3px;
+  width: 27px;
+  height: 27px;
+  margin-right: 7px;
 }
 
 .flex-container-button {
@@ -55,14 +54,15 @@
 }
 
 .button-style {
+  margin-top: -30px;
   margin-left: 35px;
 }
 
 .editText {
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
-  line-height: 21px;
+  font-size: 24px;
+  line-height: 27px;
   color: #006d84;
   margin-right: 7px;
 }
@@ -71,6 +71,6 @@
   width: 50%;
 }
 
-.pieChartStyle{
-    margin-left: 35px;
+.pieChartStyle {
+  margin-left: 25px;
 }
