--- a/WEB/src/components/MenuBar/menuBar.css
+++ b/WEB/src/components/MenuBar/menuBar.css
@@ -1,5 +1,5 @@
 .menuBar {
-  top: 48px;
+  top: 64px;
   right: 0;
   left: 0;
   z-index: 1;
@@ -29,6 +29,7 @@
 
 .menuBar-open2 {
   height: auto;
+  margin-top: 8px;
 }
 
 a.menu-link2 {
@@ -108,10 +109,9 @@ a.menu-link2 {
   top: 0;
   right: 0;
   left: 0;
-  height: 48px;
+  height: 64px;
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  align-items: center;
   padding: 0 16px;
 }
 
@@ -158,6 +158,7 @@ a.menu-link2 {
 
 .liBar:first-child {
   border-top: 0;
+  padding: 12px 0;
 }
 
 .libar-items {
@@ -209,6 +210,10 @@ a.menu-link {
   text-align: start;
 }
 
+.smallMarginLeft {
+  margin-left: 8px;
+}
+
 @media only screen and (max-width: 750px) {
   .menuPos {
     width: 125px;
@@ -219,13 +224,8 @@ a.menu-link {
   }
   .menuBar {
     top: 48px;
-    right: 0;
-    left: 0;
-    position: fixed;
-    transform: translateY(-100%);
-    transition: transform 0.5s;
-    background-color: #e9eaec;
   }
+
   .menuBar-open {
     transform: translateY(0);
     box-shadow: 0 0 5px 1px #595959;
@@ -233,13 +233,6 @@ a.menu-link {
 
   .click-menuBar-open {
     transform: translateY(0);
-  }
-
-  .menuBar2 {
-    height: 0;
-    position: relative;
-    transition: height 0.5s;
-    background-color: #e9eaec;
   }
 
   .menuBar-open2 {
@@ -287,11 +280,6 @@ a.menu-link {
     align-items: center;
     flex-wrap: wrap;
     padding: 12px 16px 12px 44px;
-  }
-
-  .liBar:first-child {
-    border-top: 0;
-    padding: 12px 0;
   }
 
   .minHelse {
@@ -342,16 +330,7 @@ a.menu-link {
     text-align: start;
   }
   .bar {
-    background-color: #569b7e;
-    z-index: 2;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
     height: 48px;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
   }
 
   .textStyle {
