--- a/WEB/src/components/CompareDataCards/compareDataCards.css
+++ b/WEB/src/components/CompareDataCards/compareDataCards.css
@@ -72,3 +72,36 @@ input[type="checkbox"] + label {
   justify-content: column;
   align-items: stretch;
 }
+
+.flex-container-datatypes-error-message {
+  display: flex;
+  flex: 1;
+}
+
+.datatypes-error-message {
+  margin-top: 15px;
+}
+
+@media only screen and (min-width: 600px) {
+  .flex-children-datatypes-checkboxes {
+    display: flex;
+    flex-basis: auto;
+    /* flex-direction: column; */
+    justify-content: column;
+    align-items: stretch;
+    margin-right: 30px;
+    padding: 0;
+  }
+
+  .atom_checkbox input[type="checkbox"] + label,
+  input[type="checkbox"] + label {
+    margin: 0px;
+    background-position: center;
+    padding-left: 1.5rem;
+    /* background-size: 1.25rem; */
+  }
+
+  .mol_validation {
+    margin: 0;
+  }
+}
