Added weight chart to compare data charts

--- a/WEB/src/components/CompareDataCards/compareDataCards.css
+++ b/WEB/src/components/CompareDataCards/compareDataCards.css
@@ -15,11 +15,6 @@
 .flex-children-datatypes-checkboxes {
   display: flex;
   flex-basis: auto;
-  /* flex-direction: column; */
-  justify-content: column;
-  align-items: stretch;
-  margin-right: 0;
-  padding: 0;
 }
 
 .atom_checkbox input[type="checkbox"] + label,
@@ -27,10 +22,20 @@ input[type="checkbox"] + label {
   margin: 0;
   background-position: 0;
   padding-left: 0.9rem;
+  padding: 0.9rem;
 }
 
 .mol_validation {
-  margin: 0;
+  margin: 16px 0;
+  height: 22px
+}
+
+.mol_validation:first-child {
+  margin: 6px 0 0;
+}
+
+.mol_validation:last-child {
+  margin: 0 0 8px;
 }
 
 .datatype-checkbox {
@@ -54,6 +59,7 @@ input[type="checkbox"] + label {
 .color-category-parent {
   display: flex;
   flex: 1;
+  margin: 8px 0;
 }
 
 .color-category-child-dot {
@@ -82,26 +88,3 @@ input[type="checkbox"] + label {
   margin-top: 15px;
 }
 
-@media only screen and (min-width: 600px) {
-  .flex-children-datatypes-checkboxes {
-    display: flex;
-    flex-basis: auto;
-    /* flex-direction: column; */
-    justify-content: column;
-    align-items: stretch;
-    margin-right: 30px;
-    padding: 0;
-  }
-
-  .atom_checkbox input[type="checkbox"] + label,
-  input[type="checkbox"] + label {
-    margin: 0px;
-    background-position: center;
-    padding-left: 1.5rem;
-    /* background-size: 1.25rem; */
-  }
-
-  .mol_validation {
-    margin: 0;
-  }
-}
