--- a/WEB/src/styles.css
+++ b/WEB/src/styles.css
@@ -5,7 +5,7 @@ body {
   display: flex;
   flex-direction: column;
   color: #000;
-  font-size: 18px;
+  font-size: 14px !important;;
   font-style: normal;
   font-weight: 500;
   line-height: 21px;
