--- a/WEB/src/components/GoalPopupContents/popupContent.css
+++ b/WEB/src/components/GoalPopupContents/popupContent.css
@@ -10,12 +10,62 @@
 
 .popup-content-center-text {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .goal-input {
   margin: 6px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  color: #006d84;
+  background: #ffffff;
+  border: 2px solid #d3d3d3;
+  box-sizing: border-box;
 }
 
-/* .goal-save-button {
-  margin-top: 4px;
-} */
+.goal-save-button {
+  border: 3px solid #006d84;
+  box-sizing: border-box;
+}
+
+.input[type="text"],
+input[type="tel"],
+input[type="email"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="date"],
+#single-input {
+  width: 200px;
+  font-size: 36px;
+}
+
+.input[type="text"],
+input[type="tel"],
+input[type="email"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="date"],
+#double-input1 {
+  width: 100px;
+  font-size: 36px;
+}
+
+.input[type="text"],
+input[type="tel"],
+input[type="email"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="date"],
+#double-input2 {
+  width: 100px;
+  font-size: 36px;
+}
