--- a/WEB/src/components/InsightCards/insightCards.css
+++ b/WEB/src/components/InsightCards/insightCards.css
@@ -26,5 +26,9 @@
 .view-parent {
   display: flex;
   align-items: space-around;
-  align-items: 'center';
+  align-items: "center";
+}
+
+.link-without-border-bottom {
+  border-bottom: "none";
 }
