--- a/WEB/src/components/MenuBar/menuBar.css
+++ b/WEB/src/components/MenuBar/menuBar.css
@@ -7,6 +7,8 @@
   transform: translateY(-100%);
   transition: transform 0.5s;
   background-color: #e9eaec;
+  max-width: 868px;
+  margin: auto;
 }
 
 .menuBar-open {
@@ -113,6 +115,8 @@ a.menu-link2 {
   display: flex;
   align-items: center;
   padding: 0 16px;
+  max-width: 868px;
+  margin: auto;
 }
 
 .menuPos {
