--- a/WEB/src/styles.css
+++ b/WEB/src/styles.css
@@ -10,6 +10,10 @@ body {
   font-weight: 500;
   line-height: 21px;
   padding-top: 72px;
+  max-width: 868px;
+  margin: auto !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 h1 {
