--- a/WEB/src/Pages/LoginPage/loginPage.css
+++ b/WEB/src/Pages/LoginPage/loginPage.css
@@ -15,7 +15,7 @@ html {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 75px;
+  margin: 50px;
 }
 
 .login-button {
@@ -29,7 +29,6 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .index-Image {
@@ -37,14 +36,37 @@ html {
   max-width: 85%;
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (min-width: 650px) {
   .google-login-button {
+    margin: 0px;
+  }
+
+  .text-generic {
     padding: 0;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: 50px;
+  }
+
+  .index-Image-head {
+    margin-top: -40px;
+  }
+}
+
+@media only screen and (min-width: 750px) {
+  .row {
+    display: inherit !important;
+  }
+
+  .index-Image-head {
+    margin-top: 0;
+    margin-bottom: 20px;
+    padding: 10px;
+  }
+
+  .text-generic {
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+
+  .login-button {
+    padding: 10px;
   }
 }
