--- a/WEB/src/styles.css
+++ b/WEB/src/styles.css
@@ -5,7 +5,7 @@ body {
   display: flex;
   flex-direction: column;
   color: #000;
-  font-size: 14px !important;;
+  font-size: 14px !important;
   font-style: normal;
   font-weight: 500;
   line-height: 21px;
@@ -26,7 +26,7 @@ h1 {
 }
 
 h5 {
-  font-family: "Roboto", sans-serif !important;;
+  font-family: "Roboto", sans-serif !important;
   font-style: normal;
   font-weight: normal;
   font-size: 18px !important;
@@ -52,4 +52,10 @@ html {
 .subheader {
   font-size: 18px;
   color: #212529;
+}
+
+.large-numerical-value {
+  font-size: 28px;
+  text-align: center;
+  line-height: 33px;
 }
