Fixed more styling of trendgoalscard

--- a/WEB/src/styles.css
+++ b/WEB/src/styles.css
@@ -59,3 +59,9 @@ html {
   text-align: center;
   line-height: 33px;
 }
+
+.really-large-numerical-value {
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+}
