Commentet out trend calculations on blood sugar dashboard card and desperately tried to fix the styling

--- a/WEB/src/components/DashboardContent/blodsukkerContent.css
+++ b/WEB/src/components/DashboardContent/blodsukkerContent.css
@@ -31,11 +31,11 @@
   font-size: 1rem;
 }
 
-.glucose-main-div {
+/* .glucose-main-div {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-}
+} */
 
 .glucose-main-children {
   flex: 1;
@@ -83,7 +83,6 @@
 .lower-left-glucose-div {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
   flex: 1;
 }
 
