--- a/WEB/src/Pages/Dashboard/DashboardContent/blodsukkerContent.css
+++ b/WEB/src/Pages/Dashboard/DashboardContent/blodsukkerContent.css
@@ -31,76 +31,64 @@
   font-size: 1rem;
 }
 
-/* .glucose-main-div {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-} */
-
-.glucose-main-children {
-  flex: 1;
-}
-
-.average-glucose-child {
-  flex: 1;
-}
-
-.average-glucose-child,
-#left-glucose-text {
+.average-left {
   text-align: left;
+  flex: 1;
 }
-.average-glucose-child,
-#right-glucose-text {
+.average-right {
   text-align: right;
+  padding-right: 38px;
+
+  flex: 2;
 }
 
-.average-glucose-parent {
+.average-div {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
 }
 
-.average-glucose-parent-right {
-  display: flex;
-}
-
-.left-glucose-div {
-  padding-right: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-
-.glucose-main {
-  min-height: 120px;
-}
-
-.glucose-time-within {
+.time-within {
   color: #007544;
   padding: 10px;
 }
 
-.lower-left-glucose-div {
+.main {
+  display: flex;
+  flex-direction: row;
+}
+
+.left {
+  flex: 1;
+  width: 50%;
+}
+
+.right {
+  flex: 1;
+  width: 50%;
+}
+
+.left-trend {
+  display: flex;
+  flex-direction: row;
+  flex: 3;
+  margin-bottom: 16px;
+}
+.right-trend {
   display: flex;
   flex-direction: row;
   flex: 1;
+  margin-bottom: 16px;
 }
 
-.upper-left-glucose-div {
+.trend-div {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  flex: 1;
+  margin-top: 15px;
+  align-items: flex-end;
 }
 
-.glucose-trend-children {
-  flex: 1;
-  max-height: 20px;
-  font-size: 12px;
-}
-
-.lower-glucose-bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+.trend-triangle {
+  height: 20px;
+  margin-right: 5px;
 }
