--- a/WEB/src/Pages/Dashboard/DashboardContent/blodsukkerContent.css
+++ b/WEB/src/Pages/Dashboard/DashboardContent/blodsukkerContent.css
@@ -34,11 +34,12 @@
 .average-left {
   text-align: left;
   flex: 1;
+  color: black;
 }
 .average-right {
   text-align: right;
   padding-right: 38px;
-
+  color: black;
   flex: 2;
 }
 
@@ -73,12 +74,15 @@
   flex-direction: row;
   flex: 3;
   margin-bottom: 16px;
+  color: black;
 }
+
 .right-trend {
   display: flex;
   flex-direction: row;
   flex: 1;
   margin-bottom: 16px;
+  color: black;
 }
 
 .trend-div {
