--- a/WEB/src/Pages/LoginPage/loginPage.css
+++ b/WEB/src/Pages/LoginPage/loginPage.css
@@ -36,9 +36,18 @@ html {
   max-width: 85%;
 }
 
+.skipText {
+  margin-left: 4px;
+}
+
+.skipLink {
+  text-align: center;
+}
+
 @media only screen and (min-width: 650px) {
   .google-login-button {
-    margin: 0px;
+    margin: 0;
+    margin-top: -25px;
   }
 
   .text-generic {
@@ -47,6 +56,11 @@ html {
 
   .index-Image-head {
     margin-top: -40px;
+  }
+
+  .login-button {
+    margin: 0;
+    margin-top: 15px;
   }
 }
 
