--- a/WEB/src/Pages/LoginPage/loginPage.css
+++ b/WEB/src/Pages/LoginPage/loginPage.css
@@ -1,7 +1,11 @@
 .text-generic {
   color: rgb(0, 0, 0);
   text-align: center;
-  padding: 10px;
+}
+
+.warining-text {
+  font-size: 18px;
+  font-weight: bold;
 }
 
 html {
@@ -42,6 +46,9 @@ html {
 
 .skipLink {
   text-align: center;
+  width: 100%;
+  padding-bottom: 0px;
+  margin-top: 0px;
 }
 
 @media only screen and (min-width: 650px) {
@@ -52,6 +59,7 @@ html {
 
   .text-generic {
     padding: 0;
+    margin-top: 0;
   }
 
   .index-Image-head {
@@ -61,6 +69,12 @@ html {
   .login-button {
     margin: 0;
     margin-top: 15px;
+  }
+
+  .skipLink {
+    margin-top: -25px;
+    width: 100%;
+    padding-bottom: 40px;
   }
 }
 
@@ -78,9 +92,16 @@ html {
   .text-generic {
     padding: 10px;
     margin-bottom: 20px;
+    margin-top: -30px;
   }
 
   .login-button {
     padding: 10px;
+  }
+
+  .skipLink {
+    width: 50%;
+    padding-bottom: 25px;
+    margin-top: -50px;
   }
 }
